--- a/index.html
+++ b/index.html
@@ -46,7 +46,16 @@
       </div>
       <!-- content -->
       <div class="content">
-        
+        <div class="loader">
+          <span>y</span>
+          <span>o</span>
+          <span>-</span>
+          <span>g</span>
+          <span>l</span>
+          <span>o</span>
+          <span>b</span>
+          <span>e</span>
+        </div>
       </div>
       <!-- links -->
       <div class="links">
